--- a/career/Wheel manufacturing industry.html
+++ b/career/Wheel manufacturing industry.html
@@ -186,6 +186,11 @@
                 </div>
                 <div class="catalog-download">
                     <span>Download catalog Băng tải ngành sản xuất bánh xe</span>
+                    <object data="https://www.thecaovn.space/img/career/BanhXe/catalo ngành sản xuất bánh xe.pdf"
+                        type="application/pdf">
+                        <iframe
+                            src="https://www.thecaovn.space/img/career/BanhXe/catalo ngành sản xuất bánh xe.pdf"></iframe>
+                    </object>
                 </div>
             </div>
     </section>
