--- a/career/Wheel manufacturing industry.html
+++ b/career/Wheel manufacturing industry.html
@@ -187,6 +187,8 @@
                 <div class="catalog-download">
                     <span>Download catalog Băng tải ngành sản xuất bánh xe</span>
                 </div>
+                <a
+                    href="http://https://drive.google.com/viewerng/viewer?embedded=true&url=https://www.thecaovn.space/img/career/NganhGo/catalo ngành gỗ.pdf">as</a>
             </div>
     </section>
     <!-- Latest Product End -->
