--- a/career/Wheel manufacturing industry.html
+++ b/career/Wheel manufacturing industry.html
@@ -185,9 +185,9 @@
 
                 </div>
                 <div class="catalog-download">
-                    <span>Download catalog Băng tải ngành sản xuất bánh xe</span>
+                    <a href="https://www.thecaovn.space/img/career/BanhXe/catalog ngành bánh xe.pdf">Download catalog
+                        Băng tải ngành sản xuất bánh xe</a>
                 </div>
-                <a href="https://www.thecaovn.space/img/career/NganhGo/catalo ngành gỗ.pdf">as</a>
             </div>
     </section>
     <!-- Latest Product End -->
