--- a/career/Wheel manufacturing industry.html
+++ b/career/Wheel manufacturing industry.html
@@ -185,7 +185,8 @@
 
                 </div>
                 <div class="catalog-download">
-                    <a href="https://www.thecaovn.space/img/career/BanhXe/catalog ngành bánh xe.pdf">Download catalog
+                    <a href="https://www.thecaovn.space/img/career/BanhXe/catalo ngành sản xuất bánh xe.pdf">Download
+                        catalog
                         Băng tải ngành sản xuất bánh xe</a>
                 </div>
             </div>
