--- a/career/Wheel manufacturing industry.html
+++ b/career/Wheel manufacturing industry.html
@@ -185,10 +185,8 @@
 
                 </div>
                 <div class="catalog-download">
-                    <a href="https://www.thecaovn.space/img/career/NganhGo/catalo ngành gỗ.pdf">Download catalog
-                        Băng tải ngành sản xuất bánh xe</a>
+                    <span>Download catalog Băng tải ngành sản xuất bánh xe</span>
                 </div>
-                <a href="https://www.thecaovn.space/img/career/NganhGo/catalo ngành gỗ.pdf">as</a>
             </div>
     </section>
     <!-- Latest Product End -->
