--- a/index.html
+++ b/index.html
@@ -303,9 +303,8 @@
                         <div class="single-features-ads first">
                             <img src="./img/icons/f-delivery.png" alt="">
                             <h4>Giao hàng nhanh</h4>
-                            <p>Bộ phận kỹ thuật toàn thời gian của chúng tôi luôn sẵn sàng để đảm bảo tất cả các
-                                sản phẩm đã cắt đi đúng quy cách của khách hàng vào ngày chúng được đặt hàng từ cửa hàng
-                                trực tuyến của chúng tôi.</p>
+                            <p>Bộ phận kỹ thuật toàn thời gian của chúng tôi luôn sẵn sàng để đảm bảo tất cả các sản
+                                phẩm đã cắt đi đúng quy cách của khách hàng và giao đúng hoặc sớm hơn ngày đã hẹn.</p>
                         </div>
                     </div>
                 </div>
