--- a/service.html
+++ b/service.html
@@ -159,14 +159,15 @@
                 </div>
                 <div class="col-lg-6 ">
                     <iframe class="iframe-factory" width="100%" height="100%"
-                        src="https://www.youtube.com/embed/fD3f2c-XM8o"
+                        src="https://www.youtube.com/embed/fD3f2c-XM8o?enablejsapi=1"
                         title="Gia công ép băng tải tại nhà xưởng khách hàng" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
 
+
                     <iframe class="iframe-nurture" width="339" height="603"
-                        src="https://www.youtube.com/embed/dvE2b54JSfM"
+                        src="https://www.youtube.com/embed/dvE2b54JSfM?enablejsapi=1"
                         title="Băng Tải Xích Nhựa- sử dụng trong ngành thực phẩm" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -248,11 +249,8 @@
                         <div class="single-features-ads first">
                             <img src="./img/icons/f-delivery.png" alt="">
                             <h4>Giao hàng nhanh</h4>
-                            <p>Bộ phận kỹ thuật toàn thời gian của chúng tôi luôn sẵn sàng để đảm bảo tất cả các
-                                sản phẩm đã cắt đi đúng quy cách của khách hàng vào ngày chúng được đặt hàng từ
-                                cửa
-                                hàng
-                                trực tuyến của chúng tôi.</p>
+                            <p>Bộ phận kỹ thuật toàn thời gian của chúng tôi luôn sẵn sàng để đảm bảo tất cả các sản
+                                phẩm đã cắt đi đúng quy cách của khách hàng và giao đúng hoặc sớm hơn ngày đã hẹn.</p>
                         </div>
                     </div>
                 </div>
